# poc-subcrates

./: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: config.rs  lib.rs
crates/net/src/: http.rs  lib.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
src/: main.rs
