[package]
name = "gosub-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/*",
]

[dependencies]
gosub_shared = { path = "crates/shared", features = [] }
gosub_config = { path = "crates/config", features = [] }
gosub_net = { path = "crates/net", features = [] }
